--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    background-image: url(../joyboy-fotor-202308070731.png);
+    background-image: url(bck-img.png);
     background-blend-mode:soft-light;
     background-color: #232526;
     background-repeat: no-repeat;
